tests/exclude/07-empty-variants.stderr
error: Too few items: Expected at least 1
 --> tests/exclude/07-empty-variants.rs:6:5
  |
6 |     variants(),
  |     ^^^^^^^^^^
